@@ -3,6 +3,8 @@ package ru.job4j.collections.convert;
 import org.junit.Test;
 
 import java.util.*;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import static org.hamcrest.core.Is.is;
 import static org.junit.Assert.assertThat;
@@ -17,15 +19,16 @@ public class UserConvertTest {
     public void whenInputListThenOutputMap() {
         UserConvert convert = new UserConvert();
 
-        List<User> input = Arrays.asList(new User(10, "Ivan", "Zneleznogorsk"),
-                                         new User(20, "Petr", "Briansk"),
-                                         new User(30, "Vadim", "Moscow"));
+        List<User> input = List.of(new User(10, "Ivan", "Zneleznogorsk"),
+                new User(20, "Petr", "Briansk"),
+                new User(30, "Vadim", "Moscow")
+        );
 
-        Map<Integer, User> expect = new HashMap<>();
-        for (User user : input) {
-            expect.put(user.getId(), user);
-        }
-
+        Map<Integer, User> expect = input.stream().collect(Collectors.toMap(
+                o -> o.getId(),
+                o -> o
+                )
+        );
         HashMap<Integer, User> result = convert.process(input);
 
         assertThat(result, is(expect));
