@@ -31,12 +31,12 @@ public class DepartStoreTest {
     @Test
     public void whenMissed() {
         DepartStore deps = new DepartStore();
-        List<String> input = Arrays.asList("k1/sk1");
+        List<String> input = List.of("k1/sk1");
 
-        List<DepartStore.Org> expect = Arrays.asList(
-                new DepartStore.Org(Arrays.asList("k1")),
-                new DepartStore.Org(Arrays.asList("k1", "sk1"))
-
+        List<DepartStore.Org> expect = List.of(
+                new DepartStore.Org(List.of("k1")),
+                new DepartStore.Org(List.of("k1", "sk1")
+                )
         );
         List<DepartStore.Org> result = deps.convert(input);
         assertThat(result, is(expect));
@@ -45,11 +45,12 @@ public class DepartStoreTest {
     @Test
     public void whenAsc() {
         DepartStore deps = new DepartStore();
-        List<String> input = Arrays.asList("k1/sk1", "k2");
-        List<DepartStore.Org> expect = Arrays.asList(
-                new DepartStore.Org(Arrays.asList("k1")),
-                new DepartStore.Org(Arrays.asList("k1", "sk1")),
-                new DepartStore.Org(Arrays.asList("k2"))
+        List<String> input = List.of("k1/sk1", "k2");
+        List<DepartStore.Org> expect = List.of(
+                new DepartStore.Org(List.of("k1")),
+                new DepartStore.Org(List.of("k1", "sk1")),
+                new DepartStore.Org(List.of("k2")
+                )
         );
         List<DepartStore.Org> result = deps.sortAsc(deps.convert(input));
         assertThat(result, is(expect));
@@ -58,11 +59,11 @@ public class DepartStoreTest {
     @Test
     public void whenDesc() {
         DepartStore deps = new DepartStore();
-        List<String> input = Arrays.asList("k1/sk1", "k2");
-        List<DepartStore.Org> expect = Arrays.asList(
-                new DepartStore.Org(Arrays.asList("k2")),
-                new DepartStore.Org(Arrays.asList("k1")),
-                new DepartStore.Org(Arrays.asList("k1", "sk1"))
+        List<String> input = List.of("k1/sk1", "k2");
+        List<DepartStore.Org> expect = List.of(
+                new DepartStore.Org(List.of("k2")),
+                new DepartStore.Org(List.of("k1")),
+                new DepartStore.Org(List.of("k1", "sk1"))
         );
         List<DepartStore.Org> result = deps.sortDesc(deps.convert(input));
         assertThat(result, is(expect));
@@ -70,8 +71,8 @@ public class DepartStoreTest {
 
     @Test
     public void whenFirstLessThenSecondThenNegativeInteger() {
-        DepartStore.Org dep1 = new DepartStore.Org(Arrays.asList("k1"));
-        DepartStore.Org dep2 = new DepartStore.Org(Arrays.asList("k1/sk1", "k2"));
+        DepartStore.Org dep1 = new DepartStore.Org(List.of("k1"));
+        DepartStore.Org dep2 = new DepartStore.Org(List.of("k1/sk1", "k2"));
         int result = dep1.compareTo(dep2);
         int expect = Math.negateExact(Math.abs(result));
         assertThat(result, is(expect));
@@ -79,8 +80,8 @@ public class DepartStoreTest {
 
     @Test
     public void whenFirstGreaterThenSecondThenPositiveInteger() {
-        DepartStore.Org dep1 = new DepartStore.Org(Arrays.asList("k1/sk1", "k2"));
-        DepartStore.Org dep2 = new DepartStore.Org(Arrays.asList("k1"));
+        DepartStore.Org dep1 = new DepartStore.Org(List.of("k1/sk1", "k2"));
+        DepartStore.Org dep2 = new DepartStore.Org(List.of("k1"));
         int result = dep1.compareTo(dep2);
         int expect = Math.abs(result);
         assertThat(result, is(expect));
@@ -88,8 +89,8 @@ public class DepartStoreTest {
 
     @Test
     public void whenFirstEqualSecondThenZeroInteger() {
-        DepartStore.Org dep1 = new DepartStore.Org(Arrays.asList("k2"));
-        DepartStore.Org dep2 = new DepartStore.Org(Arrays.asList("k2"));
+        DepartStore.Org dep1 = new DepartStore.Org(List.of("k2"));
+        DepartStore.Org dep2 = new DepartStore.Org(List.of("k2"));
         int result = dep1.compareTo(dep2);
         int expect = 0;
         assertThat(result, is(expect));
